# rtkill

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: core.rs  mod.rs  parse.rs
src/ui/: info_section.rs  list_section.rs  mod.rs
src/ui/components/: list_with_state.rs  logo.rs  message.rs  mod.rs  rainbow_text.rs
src/utils/: mod.rs  sharable_state.rs
src/utils/tests/: mod.rs
