[package]
name = "rtkill"
version = "1.1.0"
edition = "2021"
authors = ["Ilingu"]
rust-version = "1.56.1"
description = "It deletes rust 'target' folders"
readme = "README.md"
repository = "https://github.com/Ilingu/rtkill"
homepage = "https://github.com/Ilingu/rtkill"
license-file = "LICENSE"
keywords = ["rtkill", "target"]
categories = ["command-line-interface", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
crossterm = "0.26.1"
# dotenv = "0.15.0"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
number_prefix = "0.4.0"
open = "5.0.0"
rand = "0.8.5"
toml = "0.7.5"
tui = "0.19.0"
